deployments/kubernetes/base/card/card-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: card
  namespace: payment-gateway
spec:
  selector:
    app: card
  ports:
    - name: http
      port: 8084
      targetPort: 8084
    - name: grpc
      port: 9004
      targetPort: 9004
  type: ClusterIP
